2009-11-20  Alexey Proskuryakov  <ap@apple.com>

        WebSocket tests still don't work on Windows, disabling for futher invesigation.

        * platform/win/Skipped:

2009-11-20  Alexey Proskuryakov  <ap@apple.com>

        Enabling WebSocket tests on Windows - let's see if they pass after the recent fixes.

        * platform/win/Skipped:

2009-11-20  Victor Wang  <victorw@chromium.org>

        Reviewed by Darin Adler.

        Add expected pixel result for layout test input-file-re-render

        https://bugs.webkit.org/show_bug.cgi?id=31696

        * platform/mac/fast/forms/input-file-re-render-expected.checksum: Added.
        * platform/mac/fast/forms/input-file-re-render-expected.png: Added.

2009-11-20  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7389945> QTKit based media engine should not claim to support fullscreen on Leopard

        Update test results.

        * platform/mac/media/audio-controls-rendering-expected.checksum:
        * platform/mac/media/audio-controls-rendering-expected.png:
        * platform/mac/media/audio-controls-rendering-expected.txt:

2009-11-20  Roland Steiner  <rolandsteiner@chromium.org>

        Reviewed by Darin Adler.

        Test checking that CSS 'text-indent' does not affect ruby rendering by default.
        (https://bugs.webkit.org/show_bug.cgi?id=31247)

        * fast/ruby/ruby-text-indent-expected.txt: Added.
        * fast/ruby/ruby-text-indent.html: Added.

2009-11-19  Beth Dakin  <bdakin@apple.com>

        Reviewed by Darin Adler.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=31321 Make 
        -webkit-color-correction work with untagged images

        * fast/css/color-correction-on-background-image.html: Added.
        * fast/css/color-correction-untagged-images.html: Added.
        * fast/css/resources/purple-noprofile.png: Added.
        * platform/mac/fast/css/color-correction-on-background-image-expected.checksum: Added.