@@ -1,0 +1,5 @@
+Test for bug 25381: jQuery animation crashing Safari.
+
+PASS if didn't crash.
+
+
