@@ -1,5 +1,17 @@
 2009-11-20  Alexey Proskuryakov  <ap@apple.com>
 
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=25381
+        Needs test: jQuery animation crashing Safari
+
+        Adding a regression test for a bug that doesn't reproduce in ToT.
+
+        * fast/dynamic/jQuery-animation-crash-expected.txt: Added.
+        * fast/dynamic/jQuery-animation-crash.html: Added.
+
+2009-11-20  Alexey Proskuryakov  <ap@apple.com>
+
         WebSocket tests still don't work on Windows, disabling for futher invesigation.
 
         * platform/win/Skipped:
